@@ -34,6 +34,11 @@
 
 * `zcat data/ABC(D)-training.tsv.gz | perl calvin_scene_fix_abc(d).pl | gzip > data/ABC(D)fixed-training.tsv.gz`: fix the red-pink and red-blue swaps in scenes A and C respectively.
 
+* `python calvin_convert_npz.py ABCD training`: create an npz file merging all features to one array and attached meta information.
+
+* `calvindataset.py`: CalvinDataset class, reads from npz file and subclasses Dataset. Deprecating loaddata.py.
+
+
 ## calvin-files
 
 * episode_XXXXXXX.npz: Each frame is represented in a file named episode_idnum.npz, consecutive idnums indicate consecutive frames (with the exception of episode transitions I guess). Other files indicating the contents: 
