@@ -3,7 +3,7 @@
 	* TODO:
 	+ publish corrected data.
 	+ are annotations the same for D, ABC and ABCD for corresponding frames? No. only ABC-validation=ABCD-validation.
-	- convert data loader to npz compressed.
+	+ convert data loader to npz compressed.
 	- look at ABC trn D val confusion matrix what it mostly gets wrong.
 	- make validation subsets out of A,B,C as well and see if ABC model can do well with those.
 	- do feature ablation experiments to see what features it relies on.
@@ -15,7 +15,9 @@
 	RNNABCx	.8645	lightning_logs/version_4852828/checkpoints/epoch=177-step=99502.ckpt -f'range(74,98)'	{'batch_size': 32, 'hidden_size': 128, 'num_layers': 1, 'output_interval': 16, 'lr': 0.0001, 'max_steps': 100000, 'dropout': 0.75, 'weight_decay': 1.0}{'instances_per_episode': 1, 'context_length': 64, 'features': range(74, 98)}
 	MLPABC	.8863	mlp_project/glfqykq5/checkpoints/epoch=10-step=49148.ckpt	{'batch_size': 32, 'hidden': [256], 'lr': 0.0001, 'max_steps': 100000, 'dropout': 0.75, 'weight_decay': 0.5}{'instances_per_episode': 8, 'context_length': 64, 'features': range(1, 98)}
 	MLPABCx	.7250	mlp_project/scsbwf6q/checkpoints/epoch=266-step=149253.ckpt -c 64 -f 'list(range(1,54))+list(range(66,74))'	{'batch_size': 32, 'hidden': [512, 512], 'lr': 0.0001, 'max_epochs': 300, 'dropout': 0.75, 'weight_decay': 0.25}; instances_per_episode=1, context_length=64, features=list(range(1,54))+list(range(66,74))
+	RNNABCD	.9486	lightning_logs/version_4854077/checkpoints/epoch=91-step=66056.ckpt	{'batch_size': 32, 'lr': 0.0001, 'max_steps': 100000, 'hidden_size': 512, 'num_layers': 4, 'output_interval': 4, 'dropout': 0.1, 'weight_decay': 0.05}
 	RABCDx	.9169	lightning_logs/version_4852496/checkpoints/epoch=291-step=209656.ckpt 	{'batch_size': 32, 'hidden_size': 512, 'num_layers': 3, 'output_interval': 1, 'lr': 0.0001, 'max_steps': 300000, 'dropout': 0.25, 'weight_decay': 0.1}
+	MLPABCD	.9466	lightning_logs/version_4854088/checkpoints/epoch=15-step=91872.ckpt -c64	{'batch_size': 32, 'lr': 0.0001, 'max_steps': 100000, 'hidden': [128, 128], 'dropout': 0.25, 'weight_decay': 0}{'instances_per_episode': 8, 'context_length': 64, 'features': range(1, 98)}
 	MABCDx	.9397	mlp_project/p1rzqxgm/checkpoints/epoch=317-step=228324.ckpt -c 32	{'batch_size': 32, 'hidden': [512, 512], 'lr': 0.0001, 'max_steps': 300000, 'dropout': 0.5, 'weight_decay': 0.1} (instances_per_episode=1, context_length=32)
 	RNND	.9495	lightning_logs/version_4852815/checkpoints/epoch=306-step=49427.ckpt -f'range(74,98)'	{'batch_size': 32, 'hidden_size': 512, 'num_layers': 2, 'output_interval': 1, 'lr': 0.0001, 'max_steps': 50000, 'dropout': 0, 'weight_decay': 0.1}{'instances_per_episode': 1, 'context_length': 64, 'features': range(74, 98)}
 	MLPD	.9446	mlp_project/0xftsmbg/checkpoints/epoch=927-step=149408.ckpt -c 32	{'batch_size': 32, 'hidden': [512, 512], 'lr': 0.0001, 'max_steps': 300000, 'dropout': 0.5, 'weight_decay': 0.1}
